# 3DSSF_HW3

./: CMakeLists.txt  measurements.ods
data/: dragon_test.xyz  pc_test.xyz
src/: convert_dat_to_pc.py  estimate_trajectory.py  main.cpp  main_prev.cpp  run_pose.sh
